# python-project-52

./: .env.sample  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: django_ci.yml
fixtures/: labels.json  one_label.json  one_status.json  one_task.json  one_user.json  reg_users.json  status.json  statuses.json  tasks.json  users.json
groups/: apps.py  mixins.py  models.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_group_description_alter_group_creator.py  0003_rename_relations_grouprelations.py
groups/templates/groups/: delete.html  group.html  groups.html  task.html
labels/: admin.py  models.py  permissions.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_label_delete_labels.py  0003_alter_label_name.py
statuses/: admin.py  apps.py  mixins.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_taskstatus_options.py
task_manager/: apps.py  forms.py  mixins.py  models.py  permissions.py  settings.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_alter_taskstatus_name.py  0003_delete_taskstatus.py
task_manager/task_manager/: settings.py
task_manager/templates/: base.html  create.html  delete.html  index.html  login.html  update.html  users.html
tasks/: apps.py  filters.py  forms.py  mixins.py  models.py  permissions.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_tasks_author_alter_tasks_executor.py  0002_initial.py  0002_tasks_author_tasks_status.py  0003_alter_tasks_labels.py  0003_tasks_executor_alter_tasks_author_alter_tasks_status.py  0003_tasks_label.py  0004_alter_tasks_executor.py  0004_tasks_created_date.py  0005_alter_tasks_author.py  0005_alter_tasks_author_alter_tasks_executor_and_more.py  0006_alter_tasks_label.py  0007_rename_label_tasks_labels.py  0008_remove_tasks_labels.py  0009_relations_tasks_labels.py  0010_alter_tasks_executor.py  0011_alter_tasks_executor.py
users/: forms.py  mixins.py  models.py  permissions.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+26 files in other folders)
