[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
authors = ["DzmitrySha <ravenbydev@gmail.com>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
django-bootstrap4 = "^22.2"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
django-filter = "^22.1"
rollbar = "^0.16.3"
django-extensions = "^3.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
task_manager = "manage.py:main"
